--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TSOSI</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body id="body">
+    <div id="app" class=""></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
