--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,11 +3,21 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+    <title>TSOSI - Transparency to Sustain Open Science Infrastructure</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TSOSI</title>
+    <meta name="description" content="Web platform visualizing the funding made to Open Science Infrastructures.">
+    <meta property="og:title" content="TSOSI - Transparency to Sustain Open Science Infrastructure">
+    <meta property="og:site_name" content="TSOSI">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://tsosi.org/img/logo.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="518">
+    <meta property="og:image:height" content="160">
+    <meta property="og:url" content="https://tsosi.org">
   </head>
   <body id="body">
-    <div id="app" class=""></div>
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
