--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,12 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="/img/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="60x60" href="/img/favicon-60x60.png">
+    <link rel="icon" type="image/png" sizes="200x200" href="/img/favicon-200x200.png">
     <title>TSOSI - Transparency to Sustain Open Science Infrastructure</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
