--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="48x48" href="/img/favicon-48x48.png">
     <link rel="icon" type="image/png" sizes="60x60" href="/img/favicon-60x60.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/img/favicon-192x192.png">
     <link rel="icon" type="image/png" sizes="200x200" href="/img/favicon-200x200.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/img/apple-touch-icon-180x180.png">
+    <link rel="manifest" href="/img/manifest.json">
+
     <title>TSOSI - Transparency to Sustain Open Science Infrastructure</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
