Use ROR or Custom identifiers in entity URL - Allow crawling and other SEO upgrades

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,14 +15,15 @@
     <title>TSOSI - Transparency to Sustain Open Science Infrastructure</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Web platform visualizing the funding made to Open Science Infrastructures.">
+    <meta name="description" content="A data-driven platform to broaden funding for open science infrastructure.">
     <meta property="og:title" content="TSOSI - Transparency to Sustain Open Science Infrastructure">
     <meta property="og:site_name" content="TSOSI">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://tsosi.org/img/logo.png">
+    <!-- Logo with padding with a ~1.91 ratio as advised for open graph -->
+    <meta property="og:image" content="https://tsosi.org/img/logo_open_graph.png">
     <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="518">
-    <meta property="og:image:height" content="160">
+    <meta property="og:image:width" content="600">
+    <meta property="og:image:height" content="310">
     <meta property="og:url" content="https://tsosi.org">
   </head>
   <body id="body">
