Dynamically change HTML meta tags for better SEO

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A data-driven platform to broaden funding for open science infrastructure.">
     <meta property="og:title" content="TSOSI - Transparency to Sustain Open Science Infrastructure">
+    <meta property="og:description" content="A data-driven platform to broaden funding for open science infrastructure.">
     <meta property="og:site_name" content="TSOSI">
     <meta property="og:type" content="website">
     <!-- Logo with padding with a ~1.91 ratio as advised for open graph -->
